# rag-pgvector

./: .env.example  .gitignore  README.md  ingest.py  pyproject.toml  rag.py
.docker/: Dockerfile.api  Dockerfile.ingest  Dockerfile.rag  docker-compose.yml
k8s/: configmap.yaml  ingest.yaml  ollama.yaml  postgres.yaml  rag-api.yaml  secret.example.yaml  secret.yaml
src/api/: main.py  schemas.py  session.py
src/chat/: history.py  loop.py
src/generation/: llm.py
src/models/: embeddings.py
src/persistence/: chunks.py  engine.py  schema.py
src/retrieval/: query.py  reranker.py  search.py
src/utils/: constants.py
