[project]
name = "new-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.4.2",
    "fastapi>=0.139.0",
    "ollama>=0.6.2",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch==2.6.0+cu124",
    "tqdm>=4.66.0",
    "uvicorn>=0.50.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
